<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context="com.olayg.onlykats.view.SettingsFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/images_endpoint_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="breed_text_input_layout,category_text_input_layout, label_slider_limit, slider_limit, label_breed_dropdown, label_category_dropdown" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_endpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/et_endpoint"
        android:text="@string/endpoint"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_endpoint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_endpoint">

        <AutoCompleteTextView
            android:id="@+id/et_endpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/search_params_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/search_parameters"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@id/label_slider_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_endpoint" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_slider_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/slider_limit"
        android:text="@string/limit"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_params_text" />


    <com.google.android.material.slider.Slider
        android:id="@+id/slider_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:stepSize="10.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintTop_toBottomOf="@id/label_slider_limit" />



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_breed_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/slider_limit"
        android:text="@string/choose_breed"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_limit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/breed_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/label_breed_dropdown">

        <AutoCompleteTextView
            android:id="@+id/breed_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_category_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_category"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/breed_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/label_category_dropdown">

        <AutoCompleteTextView
            android:id="@+id/category_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>